force-app/main/default/objects/Dual_Draft_Job__c/Dual_Draft_Job__c.object-meta.xml
<CustomObject>
    <label>Dual Draft Job</label>
    <nameField>
        <displayFormat>DD-{0000000}</displayFormat>
        <label>Dual Draft Jobs Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dual Draft Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>