force-app/main/default/objects/Dual_Draft_Job__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Formula field to pull on the name of the Account associated with the related Job</description>
    <formula>ATI_Job__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>