force-app/main/default/objects/Dual_Draft_Job__c/fields/Check_Amount__c.field-meta.xml
<CustomField>
    <fullName>Check_Amount__c</fullName>
    <description>Formula field to pull on Check Amount value onto Dual Draft Job record to display on related list on Job record.</description>
    <formula>Dual_Draft__r.Check_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>