force-app/main/default/objects/Dual_Draft_Job__c/fields/Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Date__c</fullName>
    <description>Formula field to pull on check date value onto Dual Draft Job record to display on related list on Job record.</description>
    <formula>Dual_Draft__r.Check_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Date</label>
    <type>Date</type>
</CustomField>