force-app/main/default/objects/Dual_Draft_Job__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <description>Formula field to pull on Check Number value onto Dual Draft Job record to display on related list on Job record.</description>
    <formula>Dual_Draft__r.Check_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Number</label>
    <type>Text</type>
</CustomField>