force-app/main/default/objects/Dual_Draft_Job__c/fields/Dual_Draft__c.field-meta.xml
<CustomField>
    <fullName>Dual_Draft__c</fullName>
    <description>Master-detail relationship with Dual Draft object</description>
    <label>Dual Draft</label>
    <referenceTo>Dual_Draft__c</referenceTo>
    <relationshipLabel>Dual Draft Jobs</relationshipLabel>
    <relationshipName>Dual_Draft_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>