force-app/main/default/objects/Dual_Draft_Job__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master Detail lookup field to Opportunity object</description>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Dual Draft Jobs</relationshipLabel>
    <relationshipName>Dual_Draft_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>