force-app/main/default/objects/Dual_Draft_Job__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <description>Project Manager pulled on via formula field from associated Job record</description>
    <formula>ATI_Job__r.Project_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>