force-app/main/default/objects/Dual_Draft_Job__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <description>Formula field to pull on Return Date value onto Dual Draft Job record to display on related list on Job record.</description>
    <formula>Dual_Draft__r.Return_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>