force-app/main/default/objects/Dual_Draft_Job__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>Formula field to pull on Sent Date value onto Dual Draft Job record to display on related list on Job record.</description>
    <formula>Dual_Draft__r.Sent_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent Date</label>
    <type>Date</type>
</CustomField>