force-app/main/default/objects/Dual_Draft_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_Number__c</columns>
    <columns>Check_Amount__c</columns>
    <columns>Check_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Dual_Draft__c</columns>
    <columns>Account__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Sent_Date__c</columns>
    <columns>Return_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>